Redone the Multiplayer on both Player and Server side, Redone the Ability System on the Player Side, Redone Camera System, HUD Implemented